# Rootkit

./: Android.mk  Application.mk  CMakeLists.txt  build.sh  fetch_android_dependencies.sh  ndk_build.sh
Common/: Common.h
ReverseTcpShell/: CMakeLists.txt
ReverseTcpShell/include/: Daemon.h  ReverseTcpShell.h  TcpClient.h
ReverseTcpShell/src/: Daemon.cpp  ReverseTcpShell.cpp  TcpClient.cpp  main.cpp
include/: Common.h  ReverseTcpShell.h  TcpClient.h
src/: Daemon.cpp  ReverseTcpShell.cpp  TcpClient.cpp  main.cpp
